syntax = "proto3";  

package Example;
option csharp_namespace = "Example.Protobuf";

message MintItem  
{  
   string hash = 1;
   bytes signature = 2;
   string sender = 3;
}  
  
message TransferItem  
{  
   string hash = 1; 
   string to = 2;  
   bytes signature = 3;
   string sender = 4;
}

message ItemTransfered  
{  
   string hash = 1;
   string from = 2;
   string to = 3;  
} 

message ItemMinted  
{  
   string hash = 1;  
   string owner = 2; 
}